--- a/frontend/src/Components/Login/loginStyle.css
+++ b/frontend/src/Components/Login/loginStyle.css
@@ -1,27 +1,36 @@
+@import url('https://fonts.googleapis.com/css2?family=Geologica:wght@100..900&display=swap');
+
 .container {
-    padding: 90px;
     display: flex;
-    justify-content: center;    
+    justify-content: end;
+    height: 100vh;
+    align-items: center;
 }
 
 .login-container {
     display: flex;
     flex-direction: column;
     width: 500px;
+    border: 1px solid #000;
 }
 
 .item-login {
+    font-family: "Geologica", sans-serif;
+    font-size: 15px;
     padding-left: 10px;
-    margin-bottom: 10   px;
+    margin-bottom: 10px;
     margin-top: 10px;
     width: 400px;
     height: 35px;
     border-radius: 10px;
     border: 1px solid #000;
     align-self: center;
+    padding-left: 15px;
+    
 }
 
 .label-login {
+    font-family: "Geologica", sans-serif;
     font-size: 17px;
     font-weight: bold;
     margin-bottom: 10px;
@@ -36,5 +45,5 @@
     display: flex;
     margin-top: 20px;
     justify-content: center;
-
+    margin-bottom: 20px;
 }
